--- a/src/components/skills/skills.css
+++ b/src/components/skills/skills.css
@@ -85,9 +85,6 @@
     1px 0 rgb(0, 0, 0, 0.3), 0 -1px rgb(0, 0, 0, 0.3);
   animation: arrow-flicker 1300ms infinite;
 }
-.skills .down-arrow-box .icon:hover {
-  animation: none !important;
-}
 .skills .show {
   display: block;
 }
